egonlang-core/res/examples/invalid/let_decl_typed_as_bool_with_string_value_type.eg
let a: Bool = "foo";

// out: TypeError: mismatched types: expected type `Bool` but received `String`